# Voice-Clicker-Companion

./: .gitignore  CMakeLists.txt  Info.plist  README.md  Voice Clicker Companion.code-workspace  main.cpp
ControlPanel/: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  FindServiceDiscovery_API.cmake  SocketHelper.h
Microphone_API_DLL/: CMakeLists.txt  Microphone_API.cpp  Microphone_API.h  StreamBuffer.h
Microphone_API_DLL/rtaudio/: Makefile  config.status  libtool
Microphone_API_DLL/rtaudio/.deps/: librtaudio_la-RtAudio.Plo  librtaudio_la-rtaudio_c.Plo
Microphone_API_DLL/rtaudio/.libs/: librtaudio.6.dylib
Microphone_API_DLL/rtaudio/doc/: Makefile
Microphone_API_DLL/rtaudio/tests/: Makefile  apinames  audioprobe  duplex  playraw  playsaw  record  testall  teststops
Microphone_API_DLL/rtaudio/tests/.deps/: apinames.Po  audioprobe.Po  duplex.Po  playraw.Po  playsaw.Po  record.Po  testall.Po  teststops.Po
Microphone_API_DLL/rtaudio/tests/.libs/: apinames  audioprobe  duplex  playraw  playsaw  record  testall  teststops
ZeroConfigModule/: CMakeLists.txt  FindServiceDiscovery_API.cmake  ServiceDiscovery_API.cpp  ServiceDiscovery_API.h
ZeroConfigModule/Poco/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  MANIFEST  Makefile  VERSION  cmake_install.cmake  cmake_uninstall.cmake  config.make
ZeroConfigModule/Poco/Encodings/: Makefile  cmake_install.cmake
ZeroConfigModule/Poco/Encodings/.dep/Darwin/x86_64/: DoubleByteEncoding.d  Encodings.d  ISO8859_10Encoding.d  ISO8859_11Encoding.d  ISO8859_13Encoding.d  ISO8859_14Encoding.d  ISO8859_16Encoding.d  ISO8859_3Encoding.d  ISO8859_4Encoding.d  ISO8859_5Encoding.d  ISO8859_6Encoding.d  ISO8859_7Encoding.d  ISO8859_8Encoding.d  ISO8859_9Encoding.d  Windows1253Encoding.d  Windows1254Encoding.d  Windows1255Encoding.d  Windows1256Encoding.d  Windows1257Encoding.d  Windows1258Encoding.d  Windows874Encoding.d  Windows932Encoding.d  Windows936Encoding.d  Windows949Encoding.d  Windows950Encoding.d
ZeroConfigModule/Poco/Foundation/: Makefile  cmake_install.cmake
ZeroConfigModule/Poco/Foundation/.dep/Darwin/x86_64/: ASCIIEncoding.d  AbstractObserver.d  ActiveDispatcher.d  ArchiveStrategy.d  Ascii.d  AsyncChannel.d  AtomicCounter.d  Base32Decoder.d  Base32Encoder.d  Base64Decoder.d  Base64Encoder.d  BinaryReader.d  BinaryWriter.d  Bugcheck.d  ByteOrder.d  Channel.d  Checksum.d  Clock.d  Condition.d  Configurable.d  ConsoleChannel.d  CountingStream.d  DateTime.d  DateTimeFormat.d  DateTimeFormatter.d  DateTimeParser.d  Debugger.d  DeflatingStream.d  DigestEngine.d  DigestStream.d  DirectoryIterator.d  DirectoryIteratorStrategy.d  DirectoryWatcher.d  Environment.d  Error.d  ErrorHandler.d  Event.d  EventArgs.d  EventChannel.d  Exception.d  (+144 more)
ZeroConfigModule/Poco/JSON/: Makefile  cmake_install.cmake
ZeroConfigModule/Poco/JSON/.dep/Darwin/x86_64/: Array.d  Handler.d  JSONException.d  Object.d  ParseHandler.d  Parser.d  ParserImpl.d  PrintHandler.d  Query.d  Stringifier.d  Template.d  TemplateCache.d  pdjson.d
ZeroConfigModule/Poco/Net/: Makefile  cmake_install.cmake
ZeroConfigModule/Poco/Net/.dep/Darwin/x86_64/: AbstractHTTPRequestHandler.d  DNS.d  DatagramSocket.d  DatagramSocketImpl.d  DialogSocket.d  FTPClientSession.d  FTPStreamFactory.d  FilePartSource.d  HTMLForm.d  HTTPAuthenticationParams.d  HTTPBasicCredentials.d  HTTPBufferAllocator.d  HTTPChunkedStream.d  HTTPClientSession.d  HTTPCookie.d  HTTPCredentials.d  HTTPDigestCredentials.d  HTTPFixedLengthStream.d  HTTPHeaderStream.d  HTTPIOStream.d  HTTPMessage.d  HTTPRequest.d  HTTPRequestHandler.d  HTTPRequestHandlerFactory.d  HTTPResponse.d  HTTPServer.d  HTTPServerConnection.d  HTTPServerConnectionFactory.d  HTTPServerParams.d  HTTPServerRequest.d  HTTPServerRequestImpl.d  HTTPServerResponse.d  HTTPServerResponseImpl.d  HTTPServerSession.d  HTTPSession.d  HTTPSessionFactory.d  HTTPSessionInstantiator.d  HTTPStream.d  HTTPStreamFactory.d  HostEntry.d  (+60 more)
ZeroConfigModule/Poco/Poco/: PocoEncodingsTargets.cmake  PocoFoundationTargets.cmake  PocoJSONConfigVersion.cmake  PocoJSONTargets.cmake  PocoNetTargets.cmake  PocoUtilTargets.cmake  PocoXMLTargets.cmake
ZeroConfigModule/Poco/Util/: Makefile  cmake_install.cmake
ZeroConfigModule/Poco/Util/.dep/Darwin/x86_64/: AbstractConfiguration.d  Application.d  ConfigurationMapper.d  ConfigurationView.d  FilesystemConfiguration.d  HelpFormatter.d  IniFileConfiguration.d  IntValidator.d  JSONConfiguration.d  LayeredConfiguration.d  LoggingConfigurator.d  LoggingSubsystem.d  MapConfiguration.d  Option.d  OptionCallback.d  OptionException.d  OptionProcessor.d  OptionSet.d  PropertyFileConfiguration.d  RegExpValidator.d  ServerApplication.d  Subsystem.d  SystemConfiguration.d  Timer.d  TimerTask.d  Validator.d  XMLConfiguration.d
ZeroConfigModule/Poco/XML/: Makefile  cmake_install.cmake
ZeroConfigModule/Poco/XML/.dep/Darwin/x86_64/: AbstractContainerNode.d  AbstractNode.d  Attr.d  AttrMap.d  Attributes.d  AttributesImpl.d  CDATASection.d  CharacterData.d  ChildNodesList.d  Comment.d  ContentHandler.d  DOMBuilder.d  DOMException.d  DOMImplementation.d  DOMObject.d  DOMParser.d  DOMSerializer.d  DOMWriter.d  DTDMap.d  (+55 more)
ZeroConfigModule/Poco/lib/: libPocoDNSSDd.dylib  libPocoEncodings.62.dylib  libPocoEncodings.dylib  libPocoEncodingsd.62.dylib  libPocoEncodingsd.dylib  libPocoFoundation.62.dylib  libPocoFoundation.dylib  libPocoFoundationd.dylib  libPocoJSON.62.dylib  libPocoJSON.dylib  libPocoJSONd.62.dylib  libPocoJSONd.dylib  libPocoNet.dylib  libPocoNetd.dylib  libPocoUtil.62.dylib  libPocoUtil.dylib  libPocoUtild.62.dylib  libPocoUtild.dylib  libPocoXML.62.dylib  libPocoXML.dylib  libPocoXMLd.62.dylib  libPocoXMLd.dylib
control_panel/: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  SocketHelper.cpp
gui/: CMakeLists.txt  TrayApp.h  TrayApp.ui  Voice Clicker PC.rc  resource.h  trayassets.qrc
microphone/: CMakeLists.txt  Microphone.cpp  Microphone.h  NetworkStream.cpp  NetworkStream.h  PlaybackStream.cpp  PlaybackStream.h  StreamBuffer.cpp
zero_config/: CMakeLists.txt  ServiceDiscovery.cpp  ServiceDiscovery.h
(+80 files in other folders)
